# TeleFire

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  StopWords.txt  pdm.lock.bak  pyproject.toml  requirements.txt  telefire.py  utils.py
.github/workflows/: publish.yml
plugins/: __init__.py  auto_invite.py  auto_lottery.py  auto_reaction.py  auto_reply.py  auto_reply_test.py  base.py  chat_count.py  delete_all.py  get_all_chats.py  get_entity.py  get_lottery_winners.py  get_messages_by_ids.py  list_messages.py  log_chat.py  log_lottery_words.py  lottery.py  lottery_add.py  matrix_chengyu_bot.py  matrix_list_rooms.py  matrix_plus_mode.py  plus_mode.py  search_messages.py  special_attention_mode.py  summary_messages.py  word_cloud.py  word_cloud_inchat.py  words_notify.py  words_to_ifttt.py  words_to_pushbullet.py
plugins.bak/: ai_bot.py  auto_frds.py  auto_repeat.py  auto_three.py  burst_send.py  get_lottery_words.py  jarryxiaobot.py  list_deleted_user_messages.py  regex_messages.py  stream_to_redis.py  summary.py  summary_man.py  yvlu.py
src/telefire/: cli.py  config.py  constants.py  storage.py  utils.py
src/telefire/integrations/: __init__.py  ifttt.py
src/telefire/matrix/: __init__.py  command.py  config.py  helpers.py  service.py  store.py
src/telefire/plugins/: __init__.py  ai_bot.py  auto_frds.py  auto_invite.py  auto_reaction.py  auto_repeat.py  auto_reply.py  auto_reply_test.py  auto_three.py  base.py  burst_send.py  chat_count.py  delete_all.py  find_user.py  get_all_chats.py  get_entity.py  get_messages_by_ids.py  jarryxiaobot.py  list_deleted_user_messages.py  list_messages.py  log_chat.py  matrix_chengyu_bot.py  matrix_cleanup.py  matrix_list_rooms.py  matrix_plus_mode.py  matrix_whoami.py  plus_mode.py  regex_messages.py  search_messages.py  special_attention_mode.py  stream_to_redis.py  summary.py  summary_man.py  summary_messages.py  word_cloud.py  word_cloud_inchat.py  words_notify.py  words_to_ifttt.py  words_to_pushbullet.py  yvlu.py
src/telefire/runtime/: __init__.py  command.py  file_logging.py  logging.py
src/telefire/telegram/: __init__.py  command.py  config.py  helpers.py  service.py  store.py
src/telefire/util/: chengyu.py
