
[project]
name = ""
version = ""
description = ""
authors = [{ name = "Lei Shi", email = "me@leishi.io" }]
dependencies = [
    "aiohttp",
    "aioredis==2.0.0",
    "appdirs==1.4.4",
    "astroid==2.4.2",
    "async-timeout==3.0.1",
    "attrs==19.3.0",
    "backcall==0.2.0",
    "black>=24.0.0",
    "certifi==2020.12.5",
    "chardet==3.0.4",
    "click>=8.0.0",
    "cycler==0.10.0",
    "decorator==4.4.2",
    "fire==0.3.1",
    "hiredis==1.0.1",
    "idna==2.10",
    "ipython==7.16.1",
    "ipython-genutils==0.2.0",
    "isort==4.3.21",
    "jedi==0.17.1",
    "jieba==0.42.1",
    "kiwisolver==1.2.0",
    "lazy-object-proxy==1.4.3",
    "mccabe==0.6.1",
    "multidict==4.7.6",
    "parso==0.7.0",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "prompt-toolkit==3.0.5",
    "ptyprocess==0.6.0",
    "pyaes==1.6.1",
    "pyasn1==0.4.8",
    "pygments==2.6.1",
    "pylint==2.5.3",
    "pyparsing==2.4.7",
    "python-dateutil==2.8.1",
    "regex==2020.6.8",
    "requests==2.25.1",
    "rsa==4.6",
    "six==1.15.0",
    "telethon>=1.40.0",
    "termcolor==1.1.0",
    "toml==0.10.1",
    "traitlets==4.3.3",
    "urllib3==1.26.4",
    "wcwidth==0.2.5",
    "wrapt==1.12.1",
    "tqdm",
    "Pillow>=9.2.0",
    "openai>=1.55.2",
    "python-dotenv>=1.0.1",
    "g4f[all]>=0.3.8.1",
    "mautrix>=0.20.0",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
