[project]
name = "telefire"
version = "0.1.0"
description = "CLI tool for Telegram automation via user account"
authors = [{ name = "Lei Shi", email = "me@leishi.io" }]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "telethon>=1.40.0",
    "fire>=0.5.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "mautrix>=0.20.0",
    "jieba>=0.42.1",
    "Pillow>=10.0.0",
    "wordcloud>=1.9.0",
    "python-dateutil>=2.8.0",
    "loguru>=0.7.0",
    "g4f>=0.3.8",
]

[project.scripts]
telefire = "telefire.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
