[project]
name = "telefire"
dynamic = ["version"]
description = "CLI tool for Telegram automation via user account"
authors = [{ name = "Lei Shi", email = "me@leishi.io" }]
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "telethon>=1.42.0",
    "fire>=0.5.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "mautrix>=0.21.0",
    "Pillow>=10.0.0",
    "python-dateutil>=2.8.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
ai = ["g4f>=0.3.8"]

[project.scripts]
telefire = "telefire.cli:main"

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
